--- a/pages/mostrador.html
+++ b/pages/mostrador.html
@@ -11,8 +11,9 @@
 
 <body>
 
-    <a target="_blank" href="../index.html">pizarra</a>
+    
 
+   
     <div class="center">
 
         <table class="tabla-dos">
@@ -44,9 +45,10 @@
                 <td class="int"> <input class="c-v" id="compra-euro" type="number" min="1" max="100"></td>
                 <td class="int"> <input class="c-v" id="venta-euro" type="number" min="1" max="100"></td>
             </tr>
+           
 
         </table>
-
+        <a class="mostrador" target="_blank" href="../index.html">pizarra</a>
     </div>
 
 
