--- a/pages/mostrador.html
+++ b/pages/mostrador.html
@@ -48,7 +48,7 @@
            
 
         </table>
-        <a class="mostrador" target="_blank" href="../index.html">pizarra</a>
+        <a class="mostrador" target="_blank" href="../index.html">Ir a la pizarra</a>
     </div>
 
 
